# python-template

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SDK_USAGE.md  ai_adapter_config.json  config.example.toml  pyproject.toml
.agent/rules/: code-style.md
.agent/skills/project-development-playbook/: SKILL.md
.agents/rules/: code-style.md  project-development.md
.agents/skills/backend-engineering-playbook/: SKILL.md
.agents/skills/project-development-playbook/: SKILL.md
.claude/skills/project-development-playbook/: SKILL.md
.codex/skills/backend-engineering-playbook/: SKILL.md
.codex/skills/project-development-playbook/: SKILL.md
.cursor/rules/: backend-python-service-standards.mdc  frontend-react-typescript-vite-tailwind.mdc  project-development-standards.mdc  python-configuration-management.mdc  python-decorator-patterns.mdc  python-error-handling.mdc  python-general-coding-style.mdc  python-logging-practices.mdc  python-performance-optimization.mdc  python-pydantic-models.mdc  python-testing-practices.mdc  python-tooling-standards.mdc  python-utility-structure.mdc
.cursor/skills/backend-engineering-playbook/: SKILL.md
.cursor/skills/project-development-playbook/: SKILL.md
.github/workflows/: ci.yml  release.yml
.trellis/: .template-hashes.json
.trellis/spec/: README.md
.trellis/spec/backend/: config-logging.md  database-when-added.md  directory-structure.md  http-api-when-added.md  index.md  python-package.md  testing.md  type-safety.md
.trellis/spec/big-question/: generated-frontend-assets.md  index.md  settings-cache-in-tests.md  static-fallback-vs-api-routes.md
.trellis/spec/frontend/: components.md  design-md.md  directory-structure.md  index.md  quality.md  vite-static-mount.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  index.md  pre-implementation-checklist.md  review-checklist.md  task-flow.md
.trellis/spec/shared/: architecture.md  code-quality.md  dependencies.md  index.md  naming-and-paths.md  project-docs.md  project-structure.md  release.md  scripts.md  verification.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-09-adopt-trellis-docs/: prd.md  task.json
.trellis/workspace/Tendo33/: index.md  journal-1.md
ai_docs/: AI_TOOLING_STANDARDS.md  BACKEND_STANDARDS.md  FRONTEND_STANDARDS.md  INDEX.md  MODELS_GUIDE.md  PRE_COMMIT_GUIDE.md  SCRIPTS_GUIDE.md  SDK_USAGE.md  SETTINGS_GUIDE.md  START_HERE.md
ai_docs/current/: architecture.md  backend.md  frontend.md  release.md  scripts.md
ai_docs/decisions/: adr-001-ai-docs-source-of-truth.md  adr-002-tool-adapter-strategy.md
ai_docs/frontend_design/: DESIGN_SYSTEM.md
ai_docs/reference/: naming-and-paths.md  project-structure.md  tool-entrypoints.md  verification.md
ai_docs/standards/: backend.md  design-system.md  documentation.md  engineering.md  frontend.md
ai_docs/workflows/: add-backend-feature.md  add-frontend-feature.md  add-fullstack-feature.md  fix-bug.md  release.md  review-change.md  start-task.md
data/: test.json
doc/: AI_TOOLING_STANDARDS.md  BACKEND_STANDARDS.md  CURSOR_RULES_GUIDE.md  MODELS_GUIDE.md  PRE_COMMIT_GUIDE.md  SDK_USAGE.md  SETTINGS_GUIDE.md
docs/: installation.md  usage.md
examples/: README.md  utils_example.py
frontend/: index.html  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.test.tsx  App.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/ui/: button.tsx
frontend/src/styles/: globals.css
scripts/: check_ai_docs.py  format.py  generate_release_notes.py  lint.py  rename_package.py  run_vulture.py  setup_pre_commit.py  sync_ai_adapters.py  update_version.py
src/python_template/: __init__.py  cli.py  config.py  core.py  logger.py  utils.py
src/python_template/config/: __init__.py  settings.py
src/python_template/contracts/: __init__.py  protocols.py
src/python_template/core/: __init__.py
src/python_template/models/: __init__.py  base.py  examples.py
src/python_template/observability/: __init__.py  log_config.py
src/python_template/utils/: __init__.py  common_utils.py  context.py  date_utils.py  decorator_utils.py  file_utils.py  json_utils.py  logger_util.py  setting.py
src/utils/: __init__.py  common_utils.py  context.py  decorator_utils.py  json_utils.py  logger_util.py
tests/: __init__.py  conftest.py  test_ai_docs_scripts.py  test_async_decorators.py  test_async_utils.py  test_common_utils.py  test_context.py  test_core.py  test_data_loading.py  test_date_utils.py  test_decorator_utils.py  test_file_utils.py  test_generate_release_notes_script.py  test_json_utils.py  test_log_config.py  test_logger.py  test_logger_util.py  test_protocols.py  test_public_api.py  test_setting.py  test_settings.py  test_update_version_script.py  test_utils.py
